# DeadEnds

./: .gitignore  INSTALL  Makefile.am  README  configure.ac  makefile  readme.md  todo  todo.txt
DataTypes/: Makefile.am  block.c  hashtable.c  integertable.c  list.c  makefile  set.c  sort.c  stringset.c  stringtable.c
DataTypes/Includes/: block.h  hashtable.h  integertable.h  list.h  set.h  sort.h  stringtable.h
Database/: Makefile.am  addoperations.c  addops.c  database.c  import.c  keylist.c  makefile  nameindex.c  recordindex.c  refnindex.c  removeoperations.c  removeops.c  rootlist.c  validate.c
Database/Includes/: database.h  import.h  keylist.h  nameindex.h  recordindex.h  refnindex.h  validate.h
DeadEndsLib/Database/: Makefile.am  database.c  databaselist.c  import.c  nameindex.c  recordindex.c  refnindex.c  removeops.c  rootlist.c
DeadEndsLib/Gedcom/: Makefile.am  date.c  gedcom.c  gedpath.c  gnode.c  gnodeindex.c  gnodelist.c  lineage.c  name.c  nodeutls.c  place.c  readnode.c  rootlist.c  splitjoin.c  temp-nodes.c  writenode.c
DeadEndsLib/Interp/: Makefile.am  builtin.c  builtinlist.c  builtintable.c  context.c  evaluate.c  extra.c  frame.c  functable.c  functiontable.c  interp.c  intrpevent.c  intrpfamily.c  intrpgnode.c  intrpmath.c  intrpperson.c  intrpseq.c  intrpstring.c  pnode.c  pvalue.c  pvaluetable.c  rassa.c  sequence.c  symboltable.c
DeadEndsLib/LLSupport/: Makefile.am  appendstr.c  ask.c  brwslist.c  charmaps.c  charprops.c  choose.c  codesets.c  datei.c  equaliso.c  errlog.c  expandvars.c  gstrings.c  icvt.c  listener.c  ll-addoperations.c  ll-database.c  ll-indiseq.c  ll-list.c  ll-node-seq.c  ll-node.c  ll-sequence.c  ll-str.c  llgettext.c  lloptions.c  locales.c  messages.c  norm_charmap.c  proptbls.c  refns.c  remove.c  replace.c  rptui.c  sprintpic.c  stdstrng.c  strapp.c  strcvt.c  strset.c  strutf8.c  strwhite.c  (+6 more)
DeadEndsLib/Operations/: Makefile.am  addtofamily.c  createfamily.c  generatekey.c
DeadEndsLib/Parser/: Makefile.am  grammar.y  lexer.c  parse.c
DeadEndsLib/UI/: Makefile.am  curses-ui.c  generic.c  print.c  stdio-ui.c  ui.c  ui_cli.c  uiio.c
DeadEndsLib/Utils/: Makefile.am  appendstr.c  errors.c  file.c  path.c  standard.c  stdstrng.c  strapp.c  strutf8.c  strwhite.c  unicode.c  utils.c
Docs/Manual/: Makefile.am  de-database.texi  de-datatypes.texi  de-gedcom.texi  de-interp.texi  de-introduction.texi  de-libraries.texi  de-parser.texi  de-ui.texi  de-utils.texi  ll-python-api.texi  ll-python-internals.texi  ll-reportmanual.xml  ll-userguide.xml
Gedcom/: Makefile.am  date.c  gedcom.c  gnode.c  gnodelist.c  lineage.c  makefile  name.c  nodeutls.c  place.c  readnode.c  splitjoin.c  writenode.c
Gedcom/Includes/: gedcom.h  gnode.h  lineage.h  name.h  node.h  nodeutils.h  readnode.h  splitjoin.h  writenode.h
Interp/: Makefile.am  builtin.c  builtinlist.c  builtintable.c  evaluate.c  functable.c  functiontable.c  interp.c  intrpevent.c  intrpfamily.c  intrpgnode.c  intrpmath.c  intrpperson.c  intrpseq.c  intrpstring.c  makefile  pnode.c  pvalue.c  pvaluetable.c  rassa.c  sequence.c  symboltable.c
Interp/Includes/: builtintable.h  evaluate.h  functiontable.h  interp.h  pnode.h  pvalue.h  sequence.h  symboltable.h
Interpreter/: Makefile.am  builtin.c  builtintable.c  evaluate.c  functable.c  functiontable.c  intrpevent.c  intrpgnode.c  intrpmath.c  intrpperson.c  intrpseq.c  makefile  pvalue.c
Interpreter/Includes/: pnode.h
LLSupport/: Makefile.am  appendstr.c  brwslist.c  charmaps.c  charprops.c  choose.c  codesets.c  equaliso.c  fpattern.c  gstrings.c  icvt.c  listener.c  ll-addoperations.c  ll-database.c  ll-node-seq.c  ll-node.c  ll-sequence.c  ll-str.c  ll-temp-nodes.c  llgettext.c  lloptions.c  locales.c  messages.c  norm_charmap.c  proptbls.c  refns.c  remove.c  replace.c  sprintpic.c  stdstrng.c  strapp.c  strcvt.c  strset.c  strutf8.c  strwhite.c  translat.c  valid.c  write.c  xlat.c  xref.c  (+1 more)
LLSupport/Includes/: browse.h  charmaps.h  codesets.h  de-strings.h  editing.h  equaliso.h  feedback.h  gstrings.h  icvt.h  listener.h  ll-addoperations.h  ll-database.h  ll-list.h  ll-node.h  ll-porting.h  ll-sequence.h  llgettext.h  lloptions.h  locales.h  messages.h  norm_charmap.h  proptbls.h  readwrite.h  refns.h  remove.h  replace.h  sprintpic.h  stdlibi.h  strcvt.h  translat.h  xlat.h  xref.h  xreffile.h
Lifelines/: Makefile.am  add.c  advedit.c  ask.c  askgedc.c  askprogram.c  browse.c  brwsmenu.c  choose.c  codesets.c  cscurses.c  delete.c  dynmenu.c  edit.c  environ.c  equaliso.c  export.c  import.c  init.c  interact.c  interp-prog.c  lbrowse.c  lines_usage.c  listui.c  llabort.c  llexec.c  loadsave.c  main.c  menuset.c  merge.c  merged-main.c  miscutls.c  newrecs.c  opt-llexec.c  opt-llines.c  parse-args.c  pedigree.c  scan.c  screen.c  searchui.c  (+8 more)
Lifelines/Includes/: choose.h  codesets.h  editing.h  init.h  liflines.h  listui.h  ll-gedcom.h  ll-porting.h  ll-standard.h  llabort.h  llinesi.h  loadsave.h  menuitem.h  options.h  parse-args.h  readwrite.h  rfmt.h  screen.h  screeni.h  selectdb.h  signals.h  translat.h  xlat.h  (+2 more)
MenuLibrary/: Makefile.am  ask.c
Operations/: Makefile.am  addtofamily.c  createfamily.c  generatekey.c
Parser/: Makefile.am  grammar.y  lexer.c  makefile  parse.c
Partition/: Makefile.am  connect.c  main.c  partition.c
PatchSex/: Makefile.am  patchsex.c
Programs/: Makefile.am  de-scripts.c  deadends.c  testpython.c
RunScript/: Makefile.am  runscript.c  runscript.h
TestProgram/: Makefile.am  importone.c  test.c  testgedcomstrings.c  testgedpath.c  testsequence.c  testwritedatabase.c
Tests/: Makefile.am  ahnen  importone.c  makefile  test.c  testgedcomstrings.c  testhashtable.c  testpython.c  testsequence.c  testset.c  teststringtable.c
UI/: Makefile.am  curses-ui.c  print.c  stdio-ui.c  ui.c  ui_cli.c
UseMenus/: Makefile.am  main.c  personmenu.c  personmenu.h
Utilities/: Makefile.am  errors.c  makefile  path.c  standard.c
Utils/: Makefile.am  date.c  errors.c  file.c  path.c  standard.c  utils.c
Validate/: Makefile.am  valfamily.c  validate.c  valperson.c
(+302 files in other folders)
