# Process this file with automake to produce Makefile.in
# (configure will process the resulting Makefile.in to produce Makefile)

# Makefile for the DeadEnds MenuLibrary library

noinst_LIBRARIES = libmenulib.a

libmenulib_a_SOURCES = \
	ask.c \
	menu.c

AM_CPPFLAGS = \
	-I$(top_srcdir)/DeadEnds/MenuLibrary/Includes \
	-I$(top_srcdir)/DeadEnds/DeadEndsLib/Utils/Includes \
	-I$(top_srcdir)/DeadEnds/DeadEndsLib/DataTypes/Includes
